<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F2DF"
    tools:context=".Actualizar">

    <EditText
        android:id="@+id/txt_id_actualizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/TextView_ID_Actualizar"
        android:textColor="#9F9F7F"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <EditText
        android:id="@+id/txt_nuevo_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_mostrar_datos_actualizar"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/TextView_Nuevo_Title"
        android:textColor="#9F9F7F"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_mostrar_datos_actualizar" />

    <EditText
        android:id="@+id/txt_nuevo_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_nuevo_title"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/TextView_Nuevo_Body"
        android:textColor="#9F9F7F"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nuevo_title" />

    <EditText
        android:id="@+id/txt_nuevo_userId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_nuevo_body"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/TextView_Nuevo_UserId"
        android:textColor="#9F9F7F"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nuevo_body" />

    <Button
        android:id="@+id/boton_mostrar_actualizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_id_actualizar"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#FBCE1B"
        android:text="@string/boton_Mostrar_Datos"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_id_actualizar" />

    <TextView
        android:id="@+id/text_mostrar_datos_actualizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/boton_mostrar_actualizar"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/TextView_Datos"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_mostrar_actualizar" />

    <Button
        android:id="@+id/boton_actualizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_nuevo_userId"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#FBCE1B"
        android:text="@string/btnActualizarDatos"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nuevo_userId" />

    <Button
        android:id="@+id/boton_regresar_actualizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/boton_regresar_actualizar"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#000000"
        android:onClick="Regresar_actualizar"
        android:text="@string/boton_regresar"
        android:textColor="#FBCE1B"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_actualizar" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="163dp"
        android:background="#FCCF1B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="384dp"
        android:layout_height="145dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/modificar" />
</androidx.constraintlayout.widget.ConstraintLayout>
